--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   branch: testing # Branch to update (optional; defaults to master)
   repo: food-processors-anonymous/website-reboot
 publish_mode: editorial_workflow
-media_folder: "static/img"
+media_folder: "static/img/cds/post-images"
+public_folder: "/img/cds/post-images"
 collections:
   - name: "blog"
     label: "Blog"
@@ -12,10 +13,13 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "string"}
+      - {label: "Author", name: "author", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Banner Image", name: "image", widget: "image"}
+      - {label: "Image Alt-text", name: "image-alt"}
       - {label: "TranslationKey", name: "translationKey", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
   - name: "blogue"
     label: "Blogue"
     folder: "content/fr/blog/posts"
@@ -23,10 +27,13 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "string"}
+      - {label: "Author", name: "author", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Banner Image", name: "image", widget: "image"}
+      - {label: "Image Alt-text", name: "image-alt"}
       - {label: "TranslationKey", name: "translationKey", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
 
 exclude:
  - admin/index.js
