Build and deploy admin (#7)
* build admin app

* remove build archive

* separate node/hugo builds

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "dev": "webpack && hugo server -D",
-    "build": "webpack && hugo"
+    "build": "webpack && hugo",
+    "build_admin": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
