--- a/data/team.yml
+++ b/data/team.yml
@@ -8,6 +8,15 @@ exec:
     linkedin: aaronsnow
     email: aaron.snow@tbs-sct.gc.ca
     github: aaronsnow
+    
+  - name: Alex MacEachern
+    title:
+      en: Chief of Staff to the CEO
+      fr: Chef de cabinet au Dirigeant principal
+    image-name: alex-maceachern.jpg
+    twitter: amaceachern123
+    linkedin: alexandra-maceachern-4b0209b2
+    email: Alex.MacEachern@tbs-sct.gc.ca
 
   - name: Anatole Papadopoulos
     title:
@@ -81,16 +90,14 @@ exec:
     email: Wendy.Luciani@tbs-sct.gc.ca
     
 team:
-
-  - name: Annie Leblond
+    
+  - name: Alexa Davidson
     title:
-      en: Communications
-      fr: Communications
-    image-name: annie-leblond.jpg
-    twitter: leblond_annie
-    linkedin: annieleblond
-    email: Annie.Leblond@tbs-sct.gc.ca
-
+      en: Operations | Staffing
+      fr: Opérations | Dotation
+    image-name: alexa-davidson.jpg
+    email: Alexa.Davidson@tbs-sct.gc.ca
+  
   - name: Anik Brazeau
     title:
       en: Communications
@@ -107,14 +114,6 @@ team:
     image-name: bethany-dunfield.jpg
     github: brdunfield
     email: Bethany.Dunfield@tbs-sct.gc.ca
-
-  - name: Brianne Matheson
-    title:
-      en: Partnerships Assistant
-      fr: Adjointe aux partenariats
-    image-name: brianne-matheson.jpg
-    twitter: bri_matheson1
-    linkedin: brianne-matheson-8bba74132
 
   - name: Charlotte Pedersen
     title:
@@ -165,15 +164,6 @@ team:
     linkedin: davetoeg
     email: dave.toeg@tbs-sct.gc.ca
 
-  - name: David Buckley
-    title:
-      en: Developer | Data Scientist
-      fr: Développeur | Scientifique des données
-    image-name: david-buckley.jpg
-    linkedin: david-buckley-0aba5783
-    github: buckley-w-david
-    email: david.buckley@tbs-sct.gc.ca
-
   - name: Eman El-Fayomi
     title:
       en: Design | User Experience (UX)
@@ -182,15 +172,6 @@ team:
     twitter: emanelfy
     linkedin: eelfayomi
     email: Eman.El-Fayomi@tbs-sct.gc.ca
-    
-  - name: Emma Wootton
-    title:
-      en: Design
-      fr: Conception
-    image-name: emma-wootton.jpg
-    twitter: ewootwoot
-    linkedin: emma-wootton-b15553b1
-    email: Emma.Wootton@tbs-sct.gc.ca
 
   - name: Eva Demers-Brett
     title:
@@ -239,14 +220,6 @@ team:
     image-name: jessica-loadenthal.jpg
     email: Jessica.Loadenthal@tbs-sct.gc.ca
 
-  - name: Kelsey Harris
-    title:
-      en: Events | Capacity Building
-      fr: Évènements | Renforcement de la capacité
-    image-name: kelsey-harris.jpg
-    linkedin: kelsey-harris-39373b139
-    email: Kelsey.Harris@tbs-sct.gc.ca
-
   - name: Klara Steele
     title:
       en: Capacity Building | Policy
@@ -274,15 +247,6 @@ team:
     linkedin: le0nl
     email: leon.lukashevsky@codefor.ca
     github: leonL
-
-  - name: Liam Davidson
-    title:
-      en: Design
-      fr: Conception
-    image-name: liam-davidson.jpg
-    twitter: 
-    linkedin: liamdavidson
-    email: Liam.Davidson@tbs-scit.gc.ca
 
   - name: Lucas Cherkewski
     title:
@@ -334,7 +298,6 @@ team:
     linkedin: ilovedesign
     email: michelle.ngai@tbs-sct.gc.ca
 
-
   - name: Mike Williamson
     title:
       en: Developer | Data
@@ -376,15 +339,6 @@ team:
     image-name: priyanka-rahman.jpg
     linkedin: priyanka-rahman-5b91a8145
     email: Priyanka.Rahman@tbs-sct.gc.ca
-
-  - name: Raluca Ene
-    title:
-      en: Code For Canada Fellow | UX Designer
-      fr: Associée de Code for Canada | Designer UX
-    image-name: raluca-ene.jpg
-    email: raluca.ene@tbs-sct.gc.ca
-    twitter: eneraluca
-    linkedin: eneraluca
 
   - name: Samantha Sadasivan
     title:
@@ -463,6 +417,14 @@ team:
       fr: Concepteur de contenu
     image-name: zak-kain.jpg
     twitter: zakkain
+    email: zachary.kain@tbs-sct.gc.ca
+
+  - name: Zoe Ritchford
+    title:
+      en: Operations | Administration
+      fr: Opérations | Administration
+    image-name: zoe-richford.jpg
+    email: zoe.richford@tbs-sct.gc.ca
 
   # - name:
   #   title:
